Added project structure to read data from API and save locally in Room database

--- a/AndroidSkeletonMVP/app/src/main/res/values/strings.xml
+++ b/AndroidSkeletonMVP/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AndroidSkeletonMVP</string>
+    <string name="photo">Photo</string>
+    <string name="something_wrong_happened">Something wrong happened</string>
+    <string name="verify_connection">Verify your connection and try again later</string>
+    <string name="try_again">Try again</string>
 </resources>
