--- a/AndroidSkeletonMVP/app/src/main/res/values/strings.xml
+++ b/AndroidSkeletonMVP/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidSkeletonMVP</string>
+    <string name="app_name">Skeleton MVP</string>
     <string name="photo">Photo</string>
     <string name="something_wrong_happened">Something wrong happened</string>
     <string name="verify_connection">Verify your connection and try again later</string>
